# helix-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
docs/: README.md  learn_opengl.md  lwgle overview.md
examples/learn_opengl/: CMakeLists.txt
examples/learn_opengl/include/: imgui_windows.hpp
examples/learn_opengl/include/draw_objects/: simple_ortho_cube.hpp  square.hpp  triangle.hpp  world.hpp
examples/learn_opengl/src/: imgui_windows.cpp  main.cpp
examples/learn_opengl/src/draw_objects/: simple_ortho_cube.cpp  square.cpp  triangle.cpp  world.cpp
include/: callbacks.hpp  initializers.hpp
include/imgui/: imgui_manager.hpp
include/opengl/: buffer.hpp  shader.hpp  texture.hpp
include/scene/: camera.hpp
res/shaders/model/: rainbow.vert  solid.vert  texture.vert
res/shaders/ndc_only/: rainbow.vert
res/shaders/world/: rainbow.frag  rainbow.vert  solid.frag  texture.vert
src/: initializers.cpp
src/imgui/: imgui_manager.cpp
src/opengl/: buffer.cpp  shader.cpp  texture.cpp
src/scene/: camera.cpp
